<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_scrollFlags="noScroll"
            app:title="@string/app_name"
            app:toolbarId="@+id/toolbar">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:navigationIcon="@drawable/ic_baseline_chevron_left_24">

            </androidx.appcompat.widget.Toolbar>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:gravity="center"
                android:text="@string/title_track_detail"
                android:textAppearance="@style/TextAppearance.AppCompat.Title"
                android:textColor="@color/primary" />

        </com.google.android.material.appbar.CollapsingToolbarLayout>


    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

            <com.google.android.material.card.MaterialCardView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                app:cardCornerRadius="16dp">

                <ImageView
                    android:id="@+id/img_poster"
                    android:layout_width="180dp"
                    android:layout_height="240dp"
                    android:scaleType="fitXY"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:src="@tools:sample/backgrounds/scenic" />

            </com.google.android.material.card.MaterialCardView>

            <TextView
                android:id="@+id/txt_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="16dp"
                android:gravity="center"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Headline4"
                android:textColor="@color/primary"
                android:textStyle="bold"
                tools:text="@tools:sample/full_names" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/release_date"
                android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
                android:textColor="@color/primary"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/txt_release_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:textColor="@color/primary"
                tools:text="@tools:sample/date/ddmmyy" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/running_time"
                android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
                android:textColor="@color/primary"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/txt_time"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:textColor="@color/primary"
                tools:text="@tools:sample/date/ddmmyy" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/genre"
                android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
                android:textColor="@color/primary"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/txt_genre"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:textColor="@color/primary"
                tools:text="@tools:sample/full_names" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/description"
                android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
                android:textColor="@color/primary"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/txt_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:textColor="@color/primary"
                tools:text="@tools:sample/lorem/random" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/price"
                android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
                android:textColor="@color/primary"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/txt_price"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:textColor="@color/primary"
                tools:text="@tools:sample/us_zipcodes" />

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>